# FluidX3D

./: .gitattributes  .gitignore  BUILD.md  CITATION.cff  CMAKE.md  CMakeLists.txt  DOCUMENTATION.md  EXAMPLES.md  LICENSE.md  README.md
cmake/: FluidX3DExample.cmake  configs.cmake
examples/: CMakeLists.txt
examples/ahmed_body/: CMakeLists.txt  defines.hpp  main.cpp
examples/bell_222/: CMakeLists.txt  defines.hpp  main.cpp
examples/benchmark/: CMakeLists.txt  defines.hpp  main.cpp
examples/boeing_747/: CMakeLists.txt  main.cpp
examples/breaking_waves/: CMakeLists.txt  defines.hpp  main.cpp
examples/bursting_bubble/: CMakeLists.txt  defines.hpp  main.cpp
examples/cessna_172/: CMakeLists.txt  defines.hpp  main.cpp
examples/city/: CMakeLists.txt  defines.hpp  main.cpp
examples/city_rt/: CMakeLists.txt  defines.hpp  main.cpp
examples/colliding_droplets/: CMakeLists.txt  defines.hpp  main.cpp
examples/concorde/: CMakeLists.txt  main.cpp
examples/cow/: CMakeLists.txt  main.cpp
examples/cow_sdf/: CMakeLists.txt  main.cpp
examples/cube_gravity/: CMakeLists.txt  main.cpp
examples/cylinder_duct/: CMakeLists.txt  defines.hpp  main.cpp
examples/dam_break/: CMakeLists.txt  main.cpp
examples/delta_wing/: CMakeLists.txt  main.cpp
examples/edf/: CMakeLists.txt  main.cpp
examples/hydraulic_jump/: CMakeLists.txt  defines.hpp  main.cpp
examples/karman_vortex_street/: CMakeLists.txt  defines.hpp  main.cpp
examples/lid_driven_cavity/: CMakeLists.txt  main.cpp
examples/liquid_metal/: CMakeLists.txt  defines.hpp  main.cpp
examples/mercedes_f1/: CMakeLists.txt  main.cpp
examples/nasa_crm/: CMakeLists.txt  defines.hpp  main.cpp
examples/particle_test/: CMakeLists.txt  defines.hpp  main.cpp
examples/periodic_faucet/: CMakeLists.txt  main.cpp
examples/poiseuille_flow/: CMakeLists.txt  defines.hpp  main.cpp
examples/radial_fan/: CMakeLists.txt  defines.hpp  main.cpp
examples/raindrop/: CMakeLists.txt  defines.hpp  main.cpp
examples/rayleigh_benard/: CMakeLists.txt  main.cpp
examples/river/: CMakeLists.txt  defines.hpp  main.cpp
examples/space_shuttle/: CMakeLists.txt  main.cpp
examples/starship/: CMakeLists.txt  main.cpp
examples/stokes_drag/: CMakeLists.txt  defines.hpp  main.cpp
examples/taylor_couette/: CMakeLists.txt  defines.hpp  main.cpp
examples/taylor_green_2d/: CMakeLists.txt  defines.hpp  main.cpp
examples/taylor_green_3d/: CMakeLists.txt  defines.hpp  main.cpp
examples/thermal_convection/: CMakeLists.txt  defines.hpp  main.cpp
examples/tie_fighter/: CMakeLists.txt  main.cpp
examples/xwing/: CMakeLists.txt  main.cpp
resources/: city.stl  download_all_thingiverse_stl.py  download_thingiverse_stl.py
src/: kernel.cpp  lbm.hpp  utilities.hpp
src/sdf_cache/: CMakeLists.txt  hash_utils.cpp  hash_utils.hpp  sdf_cache.cpp  sdf_cache.hpp
