# Examples
add_subdirectory(benchmark)
add_subdirectory(city)
add_subdirectory(city_rt)
add_subdirectory(taylor_green_3d)
add_subdirectory(taylor_green_2d)
add_subdirectory(poiseuille_flow)
add_subdirectory(stokes_drag)
add_subdirectory(cylinder_duct)
add_subdirectory(taylor_couette)
add_subdirectory(lid_driven_cavity)
add_subdirectory(karman_vortex_street)
add_subdirectory(particle_test)
add_subdirectory(delta_wing)
add_subdirectory(nasa_crm)
add_subdirectory(concorde)
add_subdirectory(boeing_747)
add_subdirectory(xwing)
add_subdirectory(tie_fighter)
add_subdirectory(radial_fan)
add_subdirectory(edf)
add_subdirectory(cow)
add_subdirectory(cow_sdf)
add_subdirectory(space_shuttle)
add_subdirectory(starship)
add_subdirectory(ahmed_body)
add_subdirectory(cessna_172)
add_subdirectory(bell_222)
add_subdirectory(mercedes_f1)
add_subdirectory(hydraulic_jump)
add_subdirectory(dam_break)
add_subdirectory(liquid_metal)
add_subdirectory(breaking_waves)
add_subdirectory(river)
add_subdirectory(raindrop)
add_subdirectory(bursting_bubble)
add_subdirectory(cube_gravity)
add_subdirectory(periodic_faucet)
add_subdirectory(colliding_droplets)
add_subdirectory(rayleigh_benard)
add_subdirectory(thermal_convection)
